// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBannerSkipLink (intern) ClickSkipLink play-test 1`] = `
<div data-test-block="true">
  <a href="main:first-of-type"
     class="TopBannerSkipLink_skipLink__5N+l7"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
  <main id="hovedinnhold"
        tabindex="-1"
  >
    Hovedinnholdet på siden
  </main>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <a href="main:first-of-type"
     class="TopBannerSkipLink_skipLink__5N+l7"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <a id="htmlId"
     href="main:first-of-type"
     class="dummyClassname TopBannerSkipLink_skipLink__5N+l7"
     lang="nb"
     data-testid="123ID"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) WithBreakpointLAndFocused play-test 1`] = `
<div data-test-block="true">
  <a href="main:first-of-type"
     class="TopBannerSkipLink_skipLink__5N+l7"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) WithBreakpointMAndFocused play-test 1`] = `
<div data-test-block="true">
  <a href="main:first-of-type"
     class="TopBannerSkipLink_skipLink__5N+l7"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) WithBreakpointSAndFocused play-test 1`] = `
<div data-test-block="true">
  <a href="main:first-of-type"
     class="TopBannerSkipLink_skipLink__5N+l7"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) WithBreakpointXSAndFocused play-test 1`] = `
<div data-test-block="true">
  <a href="main:first-of-type"
     class="TopBannerSkipLink_skipLink__5N+l7"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) WithHrefAndChildren play-test 1`] = `
<div data-test-block="true">
  <a href="#hovedinnhold"
     class="TopBannerSkipLink_skipLink__5N+l7"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Snarvei til hovedinnhold
    </span>
  </a>
  <main id="hovedinnhold">
    Hovedinnholdet på siden
  </main>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) WithMobileScreenAndFocused play-test 1`] = `
<div data-test-block="true">
  <a href="main:first-of-type"
     class="TopBannerSkipLink_skipLink__5N+l7"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;

exports[`Tester/TopBannerSkipLink (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <a href="main:first-of-type"
     class="TopBannerSkipLink_skipLink__5N+l7"
     id="dummyIdForwardedFromRef"
  >
    <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
        </path>
      </svg>
      Hopp til hovedinnhold
    </span>
  </a>
</div>
`;
